fix(ui): Better modal close button alignment

--- a/src/sentry/static/sentry/less/shared-components.less
+++ b/src/sentry/static/sentry/less/shared-components.less
@@ -2654,8 +2654,9 @@ ul.radio-inputs {
     padding: 0;
     font-size: 24px;
     position: absolute;
-    top: 14px;
-    right: 15px;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 24px;
     z-index: 100;
     color: lighten(@gray, 20);
     .transition(color 0.1s linear);
@@ -2678,6 +2679,7 @@ ul.radio-inputs {
     border-radius: 7px 7px 0 0;
     padding: 20px 30px;
     margin: -30px -30px 20px;
+    position: relative;
 
     h1,
     h2,
